Controlladores recurso y tipo recurso
