# swagger/v1/swagger.yaml
@@ -4,6 +4,58 @@ info:
   title: API V1
   version: v1
 paths:
+  "/tiporecursos":
+    get:
+      summary: Lista de Tipos de Recursos
+      tags:
+      - Tipo Recurso
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/tiporecurso"
+            text/json:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/tiporecurso"
+            text/plain:
+              schema:
+                type: array
+                items:
+                  "$ref": "#/components/schemas/tiporecurso"
+        '500':
+          description: Error interno del servidor
+  "/tiporecursos/{id}":
+    get:
+      summary: Obtener el Tipo de Recurso por id
+      tags:
+      - Tipo Recurso
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/tiporecurso"
+            text/json:
+              schema:
+                "$ref": "#/components/schemas/tiporecurso"
+            text/plain:
+              schema:
+                "$ref": "#/components/schemas/tiporecurso"
+        '404':
+          description: Recurso no encontrado
   "/usuarios":
     post:
       summary: Crear usuario
@@ -204,3 +256,43 @@ components:
       - ACTIVO_USUARIO
       - FECHA_CREACION_USUARIO
       - FECHA_MODIFICACION_USUARIO
+    tiporecurso:
+      type: object
+      properties:
+        ID_TIPO_RECURSO:
+          type: integer
+        TIPO_RECURSO:
+          type: string
+      required:
+      - ID_TIPO_RECURSO
+      - TIPO_RECURSO
+    recurso:
+      type: object
+      properties:
+        ID_RECURSO:
+          type: integer
+        ID_F_RECURSO_PADRE:
+          type: integer
+        ID_F_TIPO_RECURSO:
+          type: integer
+        NOMBRE_RECURSO:
+          type: string
+        RUTA_RECURSO:
+          type: string
+        DESCRIPCION_RECURSO:
+          type: string
+        ACTIVO_RECURSO:
+          type: boolean
+        FECHA_CREACION:
+          type: string
+        FECHA_MODIFICACION:
+          type: string
+      required:
+      - ID_F_RECURSO_PADRE
+      - ID_F_TIPO_RECURSO
+      - NOMBRE_RECURSO
+      - RUTA_RECURSO
+      - DESCRIPCION_RECURSO
+      - ACTIVO_RECURSO
+      - FECHA_CREACION
+      - FECHA_MODIFICACION
